fix: variable not passed correctly

--- a/Infinite_Image_Browsing_Demo.ipynb
+++ b/Infinite_Image_Browsing_Demo.ipynb
@@ -48,7 +48,6 @@
         "repo_url = \"https://github.com/zanllp/sd-webui-infinite-image-browsing.git\"\n",
         "repo_dir = os.path.join(root_dir, \"sd-webui-infinite-image-browsing\")\n",
         "\n",
-        "# @markdown Mount to your Google Drive\n",
         "mount_drive = False #@param {type:\"boolean\"}\n",
         "# @markdown Specify where your `images_dir` located, it also automatically create new directory if couldn't find it.\n",
         "images_dir = \"/content/images\" #@param {type:\"string\"}\n",
@@ -112,7 +111,6 @@
         "user_agent = \"gdl/1.24.5\"\n",
         "#@markdown You can limit the number of images to download by using the `--range` option followed by the desired range. For example `1-200`.\n",
         "range = \"1-200\" #@param {type: \"string\"}\n",
-        "write_tags = True #@param {type: \"boolean\"}\n",
         "additional_arguments = \"--filename /O --no-part\"\n",
         "\n",
         "tags = prompt.split(',')\n",
@@ -146,59 +144,23 @@
         "\n",
         "    return args\n",
         "\n",
-        "def pre_process_tags(directory):\n",
-        "    for item in os.listdir(directory):\n",
-        "        item_path = os.path.join(directory, item)\n",
-        "        if os.path.isfile(item_path) and item.endswith(\".txt\"):\n",
-        "            old_path = item_path\n",
-        "            new_file_name = os.path.splitext(os.path.splitext(item)[0])[0] + \".txt\"\n",
-        "            new_path = os.path.join(directory, new_file_name)\n",
-        "\n",
-        "            os.rename(old_path, new_path)\n",
-        "\n",
-        "            with open(new_path, \"r\") as f:\n",
-        "                contents = f.read()\n",
-        "\n",
-        "            contents = html.unescape(contents)\n",
-        "            contents = contents.replace(\"_\", \" \")\n",
-        "            contents = \", \".join(contents.split(\"\\n\"))\n",
-        "\n",
-        "            with open(new_path, \"w\") as f:\n",
-        "                f.write(contents)\n",
-        "\n",
-        "        elif os.path.isdir(item_path):\n",
-        "            pre_process_tags(item_path)\n",
-        "\n",
         "get_url_config = {\n",
+        "    \"_valid_url\" : valid_url,\n",
         "    \"get-urls\" : True,\n",
         "    \"range\" : range if range else None,\n",
         "    \"user-agent\" : user_agent\n",
         "}\n",
         "\n",
-        "scrape_config = {\n",
-        "    \"directory\" : images_dir,\n",
-        "    \"write-tags\" : write_tags,\n",
-        "    \"range\" : range if range else None,\n",
-        "    \"user-agent\" : user_agent\n",
-        "}\n",
+        "get_url_args = scrape(get_url_config)\n",
+        "scraper_text = os.path.join(root_dir, \"scrape_this.txt\")\n",
         "\n",
-        "if not write_tags:\n",
-        "    scraper_text = os.path.join(root_dir, \"scrape_this.txt\")\n",
-        "    with capture.capture_output() as cap:\n",
-        "        args = scrape(get_url_config)\n",
-        "        !gallery-dl \"{valid_url}\" {args} {additional_arguments}\n",
-        "    with open(scraper_text, \"w\") as f:\n",
-        "        f.write(cap.stdout)\n",
+        "with capture.capture_output() as cap:\n",
+        "    !gallery-dl {get_url_args} {additional_arguments}\n",
+        "with open(scraper_text, \"w\") as f:\n",
+        "    f.write(cap.stdout)\n",
         "\n",
-        "    os.chdir(images_dir)\n",
-        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -i {scraper_text}\n",
-        "\n",
-        "else:\n",
-        "    args = scrape(scrape_config)\n",
-        "    !gallery-dl \"{valid_url}\" {args} {additional_arguments}\n",
-        "\n",
-        "if write_tags:\n",
-        "    pre_process_tags(images_dir)\n",
+        "os.chdir(images_dir)\n",
+        "!aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -i {scraper_text}\n",
         "\n",
         "clear_output(wait=True)\n",
         "print(\"All is done! go to the next step.\")"
@@ -214,9 +176,10 @@
       "cell_type": "code",
       "source": [
         "#@title **Launch!**\n",
+        "import json\n",
+        "import portpicker\n",
         "from threading import Thread\n",
         "from google.colab.output import serve_kernel_port_as_iframe\n",
-        "import json\n",
         "\n",
         "config = {\n",
         "    \"outdir_txt2img_samples\": images_dir,\n",
@@ -224,13 +187,15 @@
         "\n",
         "main_app = os.path.join(repo_dir, \"app.py\")\n",
         "config_file = os.path.join(root_dir, \"config.json\")\n",
+        "port = portpicker.pick_unused_port()\n",
+        "window_height = 550 #@param {type:\"slider\", min:0, max:1000, step:1}\n",
         "\n",
         "def write_file(filename, config):\n",
         "    with open(filename, 'w',) as f:\n",
         "        json.dump(config, f, indent=4)\n",
         "\n",
         "def run_app():\n",
-        "    !python {main_app} --port=7860 --sd_webui_config=config_file\n",
+        "    !python {main_app} --port={port} --sd_webui_config={config_file}\n",
         "\n",
         "def main():\n",
         "    os.chdir(images_dir)\n",
@@ -240,7 +205,7 @@
         "    thread = Thread(target=run_app)\n",
         "    thread.start()\n",
         "\n",
-        "    serve_kernel_port_as_iframe(7860, width='100%', height='500', cache_in_notebook=False)\n",
+        "    serve_kernel_port_as_iframe(port, width='100%', height=window_height, cache_in_notebook=False)\n",
         "\n",
         "main()"
       ],
