--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -131,14 +131,14 @@
         "            package_name = os.path.basename(package)\n",
         "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {root_dir} -o {package_name} {package}\n",
         "            if package_name == f\"{repo_type.lower()}-webui-deps.tar.lz4\":\n",
-        "                !tar -xI lz4 -f {package_name} --overwrite-dir --directory=/usr/local/lib/python3.9/dist-packages/\n",
+        "                !tar -xI lz4 -f {package_name} --overwrite-dir --directory=/usr/local/lib/python3.10/dist-packages/\n",
         "            else:\n",
         "                !tar -xI lz4 -f {package_name} {\"--overwrite-dir\" if overwrite else \"\"} --directory=/\n",
         "            os.remove(package_name)\n",
         "            del cap\n",
         "\n",
-        "    if os.path.exists(\"/usr/local/lib/python3.9/dist-packages/ffmpy-0.3.0.dist-info\"):\n",
-        "        shutil.rmtree(\"/usr/local/lib/python3.9/dist-packages/ffmpy-0.3.0.dist-info\")\n",
+        "    if os.path.exists(\"/usr/local/lib/python3.10/dist-packages/ffmpy-0.3.0.dist-info\"):\n",
+        "        shutil.rmtree(\"/usr/local/lib/python3.10/dist-packages/ffmpy-0.3.0.dist-info\")\n",
         "\n",
         "    s = getoutput(\"nvidia-smi\")\n",
         "    with capture.capture_output() as cap:\n",
