--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -13,8 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "![visitor][visitor-badge] \n",
+        "[![visitor][visitor-badge]][visitor-stats] \n",
         "[![discord][discord-badge]][discord-lookup]\n",
         "[![ko-fi][ko-fi-badge]][ko-fi-link]\n",
         "[![saweria][saweria-badge]][saweria-link]\n",
@@ -24,7 +23,9 @@
         "\n",
         "[What's New?][README] | `NEW!` [Pocketbook Guide][MANUAL]\n",
         "\n",
-        "[visitor-badge]: https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui\n",
+        "<!-- [visitor-badge]: https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui -->\n",
+        "[visitor-badge]: https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fcolab.research.google.com%2Fgithub%2FLinaqruf%2Fsd-notebook-collection%2Fblob%2Fmain%2Fcagliostro-colab-ui.ipynb&label=Visitors&labelColor=%23d9e3f0&countColor=%23697689&style=flat&labelStyle=none\n",
+        "[visitor-stats]: https://visitorbadge.io/status?path=https%3A%2F%2Fcolab.research.google.com%2Fgithub%2FLinaqruf%2Fsd-notebook-collection%2Fblob%2Fmain%2Fcagliostro-colab-ui.ipynb\n",
         "[discord-badge]: https://dcbadge.vercel.app/api/shield/850007095775723532?style=flat\n",
         "[discord-lookup]: https://lookup.guru/850007095775723532\n",
         "[ko-fi-badge]: https://img.shields.io/badge/Support%20me%20on%20Ko--fi-F16061?logo=ko-fi&logoColor=white&style=flat\n",
@@ -92,19 +93,21 @@
         "dpm_v2_url = \"https://gist.github.com/neggles/75eaacb3f49c209636be61fa96ca95ca/raw/f8c6382f0af65038149fd4258f8462697b698073/01-add-DPMPP-2M-V2.patch\"\n",
         "sdv2_patches = \"https://raw.githubusercontent.com/ddPn08/automatic1111-colab/main/patches/stablediffusion-lowram.patch\"\n",
         "\n",
-        "# @markdown ### Drive Config\n",
+        "# @markdown ### **Drive Config**\n",
         "mount_drive = False  # @param {type:'boolean'}\n",
         "output_to_drive = False  # @param {type:'boolean'}\n",
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "\n",
-        "# @markdown ### Repo Config\n",
+        "# @markdown ### **Repo Config**\n",
         "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"Anapnoe\"]\n",
         "update_webui = True  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
         "dpm_v2_patch = False  # @param {type:'boolean'}\n",
-        "# @markdown > It's not recommended to set this `True` if you have **Colab Pro** subscription.\n",
-        "colab_optimizations = False  # @param {type:'boolean'}\n",
+        "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
+        "ram_alloc_patch = True  # @param {type:'boolean'}\n",
+        "colab_optimizations = True  # @param {type:'boolean'}\n",
+        "\n",
         "\n",
         "# model\n",
         "os.chdir(root_dir)\n",
@@ -169,17 +172,18 @@
         "\n",
         "def install_dependencies():\n",
         "    ubuntu_deps_url = \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/ubuntu-deps.zip\"\n",
-        "    ram_patch = \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/ram_patch.zip\"\n",
+        "    ram_patch_url = \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/ram_patch.zip\"\n",
         "\n",
         "    print(\"\u001b[1;32mInstalling dependencies...\")\n",
         "    \n",
         "    with capture.capture_output() as cap:\n",
         "        !apt -y update -qq\n",
-        "        !apt install libunwind8-dev -yqq\n",
-        "        !apt install unionfs-fuse -qq\n",
-        "        for url in [ubuntu_deps_url, ram_patch]:\n",
-        "            ubuntu_deps(url, deps_dir)\n",
-        "        os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
+        "        !apt install unionfs-fuse -qq         \n",
+        "        ubuntu_deps(ubuntu_deps_url, deps_dir)\n",
+        "        if ram_alloc_patch:\n",
+        "              !apt install libunwind8-dev -yqq \n",
+        "              ubuntu_deps(ram_patch_url, deps_dir)\n",
+        "              os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
         "        del cap   \n",
         "\n",
         "def install_webui(overwrite):\n",
@@ -260,15 +264,9 @@
         "            !git apply --whitespace=fix {patches_dir}/01-add-DPMPP-2M-V2.patch\n",
         "\n",
         "    if colab_optimizations:\n",
-        "        with capture.capture_output() as cap:\n",
-        "            !wget  {sdv2_patches} -P {patches_dir}  -c\n",
-        "            os.chdir(os.path.join(repo_dir, \"repositories/stable-diffusion-stability-ai\"))\n",
-        "            !git apply {patches_dir}/stablediffusion-lowram.patch\n",
-        "            del cap\n",
-        "\n",
-        "        !sed -i \"s@os.path.splitext(checkpoint_.*@os.path.splitext(checkpoint_file); map_location='cuda'@\" {repo_dir}/modules/sd_models.py\n",
+        "        !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\" {repo_dir}/modules/sd_models.py\n",
         "        !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' {repo_dir}/webui.py\n",
-        "        !sed -i \"s@'cpu'@'cuda'@\" {repo_dir}/modules/extras.py\n",
+        "        !sed -i \"s@map_location='cpu'@map_location='cuda'@\" {repo_dir}/modules/extras.py\n",
         "        shutil.rmtree(patches_dir)\n",
         "\n",
         "    if output_to_drive: \n",
@@ -293,13 +291,7 @@
         "    config[\"outdir_img2img_grids\"] = os.path.join(drive_dir, \"img2img-grids\")\n",
         "    write_config(config_file, config)\n",
         "\n",
-        "    for dir in [\n",
-        "        \"txt2img-images\",\n",
-        "        \"img2img-images\",\n",
-        "        \"extras-images\",\n",
-        "        \"txt2img-grids\",\n",
-        "        \"img2img-grids\",\n",
-        "    ]:\n",
+        "    for dir in [\"txt2img-images\", \"img2img-images\", \"extras-images\", \"txt2img-grids\", \"img2img-grids\",]:\n",
         "        os.makedirs(os.path.join(drive_dir, dir), exist_ok=True)\n",
         "\n",
         "    skipped_extensions = []\n",
@@ -351,10 +343,11 @@
         "        else:\n",
         "            mins, secs = divmod(elapsed_time, 60)\n",
         "            print(f\"\u001b[1;32mAll extensions are up to date. Took {mins} mins {secs} sec\")\n",
-        "\n",
+        "            \n",
         "    os.environ[\"colab_url\"] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
         "    os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
         "    os.environ[\"SAFETENSORS_FAST_GPU\"] = \"1\"\n",
+        "    os.environ['PYTORCH_CUDA_ALLOC_CONF'] = \"garbage_collection_threshold:0.9,max_split_size_mb:512\"\n",
         "    os.environ[\"PYTHONWARNINGS\"] = \"ignore\"\n",
         "\n",
         "    print(\"\u001b[1;32mAll is done! Go to the next step.\")\n",
@@ -382,16 +375,16 @@
         "\n",
         "os.chdir(root_dir)\n",
         "\n",
-        "# @markdown ### Available SD v1.x Model\n",
+        "# @markdown ### **SD v1.x Model**\n",
         "anything_v3_0 = False  # @param {type: 'boolean'}\n",
         "anime_pastel_dream = False  # @param {type: 'boolean'}\n",
         "anylora = True  # @param {type: 'boolean'}\n",
         "chilloutmix_ni = False  # @param {type: 'boolean'}\n",
-        "# @markdown ### Available SD v2.x 768v Model\n",
+        "# @markdown ### **SD v2.x 768v Model**\n",
         "replicant_v2 = False  # @param {type: 'boolean'}\n",
         "waifu_diffusion_v1_5_e2_aesthetic = False  # @param {type: 'boolean'}\n",
         "illuminati_diffusion_v1_1 = False  # @param {type: 'boolean'}\n",
-        "# @markdown ### Available VAE\n",
+        "# @markdown ### **VAE Model**\n",
         "anime = True  # @param {type: 'boolean'}\n",
         "waifu_diffusion = False  # @param {type: 'boolean'}\n",
         "stable_diffusion = False  # @param {type: 'boolean'}\n",
@@ -490,15 +483,15 @@
         "from IPython.utils import capture\n",
         "from tqdm import tqdm\n",
         "\n",
-        "# @markdown ### ControlNet Annotator\n",
+        "# @markdown ### **ControlNet Annotator**\n",
         "pre_download_annotator = True  # @param {type: 'boolean'}\n",
-        "# @markdown ### SDv1.x ControlNet Model\n",
+        "# @markdown ### **SDv1.x ControlNet Model**\n",
         "control_v11_sd15_model = True  # @param {type: 'boolean'}\n",
         "t2i_adapter_sd15_model = False  # @param {type: 'boolean'}\n",
-        "# @markdown ### SDv2.x ControlNet Model\n",
+        "# @markdown ### **SDv2.x ControlNet Model**\n",
         "control_v10_sd21_model = False  # @param {type: 'boolean'}\n",
         "control_v10_wd15_model = False  # @param {type: 'boolean'}\n",
-        "# @markdown ### ControlNet Config:\n",
+        "# @markdown ### **ControlNet Config**\n",
         "control_net_max_models_num = 2 #@param {type:\"slider\", min:1, max:10, step:1}\n",
         "control_net_model_adapter_config = \"sketch_adapter_v14.yaml\" #@param [\"image_adapter_v14.yaml\", \"sketch_adapter_v14.yaml\", \"t2iadapter_color_sd14v1.yaml\", \"t2iadapter_keypose_sd14v1.yaml\", \"t2iadapter_style_sd14v1.yaml\"]\n",
         "config_file = os.path.join(repo_dir, \"config.json\")\n",
@@ -963,38 +956,28 @@
         "import string\n",
         "%store -r \n",
         "\n",
-        "# @markdown ### Alternative Tunnel\n",
+        "# @markdown ### **Alternative Tunnel**\n",
+        "\n",
         "# @markdown > Recommended Tunnels: `ngrok` > `cloudflared` > `remotemoe` > `localhostrun` > `googleusercontent` > `gradio`\n",
         "tunnel = \"cloudflared\" # @param ['none', 'multiple','cloudflared', 'localhostrun', 'remotemoe', \"googleusercontent\"]\n",
         "# @markdown > Get <b>your</b> token for ngrok [here](https://dashboard.ngrok.com/get-started/your-authtoken) \n",
         "ngrok_token = \"\" # @param {type: 'string'}\n",
         "ngrok_region = \"ap\" # @param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
-        "# @markdown ### Theme Selector\n",
+        "# @markdown ### **UI Config**\n",
+        "use_dark_theme = True # @param {type: 'boolean'}\n",
         "theme = \"moonlight\" # @param ['tron2', 'ogxCyanInvert', 'ogxBGreen', 'ogxRed', 'default', 'moonlight', 'd-230-52-94', 'backup', 'tron', 'ogxRedYellow', 'default_orange', 'ogxRedPurple', 'retrog', 'ogxCyan', 'fun', 'ogxGreen', 'default_cyan', 'Golde']\n",
-        "# @markdown ### Arguments\n",
+        "# @markdown Set `use_preset` for using default prompt, resolution, sampler, and other settings\n",
+        "use_presets = True # @param {type: 'boolean'}\n",
+        "# @markdown ### **Arguments**\n",
         "use_gradio_auth = False # @param {type: 'boolean'}\n",
         "accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
-        "load_in_vram = True # @param {type: 'boolean'}\n",
-        "quiet_mode = True # @param {type: 'boolean'}\n",
         "auto_select_model = False # @param {type: 'boolean'}\n",
         "auto_select_VAE = True # @param {type: 'boolean'}\n",
-        "no_half_VAE = True # @param {type: 'boolean'}\n",
-        "additional_arguments = \"--no-download-sd-model --gradio-queue\" #@param {type: 'string'}\n",
+        "additional_arguments = \"--lowram --no-half-vae\" #@param {type: 'string'}\n",
         "\n",
         "config_file = os.path.join(repo_dir, \"config.json\")\n",
         "ui_config_file = os.path.join(repo_dir, \"ui-config.json\")\n",
         "voldemort=base64.b64decode((\"'c3RhYmxlLWRpZmZ1c2lvbi13ZWJ1aQ=='\").encode('ascii')).decode('ascii')\n",
-        "\n",
-        "default_prompt = \"masterpiece, best quality,\"\n",
-        "default_neg_prompt = \"(worst quality, low quality:1.4)\"\n",
-        "default_sampler = \"DPM++ 2M Karras\"\n",
-        "if dpm_v2_patch:\n",
-        "    default_sampler = \"DPM++ 2M Karras v2\" \n",
-        "default_steps = 20\n",
-        "default_width = 512\n",
-        "default_height = 768\n",
-        "default_denoising_strength = 0.55\n",
-        "default_cfg_scale = 7\n",
         "\n",
         "user = \"cagliostro\"\n",
         "password = \"\".join(random.choices(string.ascii_letters + string.digits, k=6))\n",
@@ -1059,6 +1042,10 @@
         "    model_files = [f for f in models_list if f.endswith(('.ckpt','.safetensors'))]\n",
         "    if model_files:\n",
         "        model_path = random.choice(model_files)\n",
+        "        if os.path.exists(os.path.join(valid_ckpt_dir, model_path)):\n",
+        "            config = read_config(config_file)\n",
+        "            config[\"sd_model_checkpoint\"] = model_path\n",
+        "            write_config(config_file, config)\n",
         "\n",
         "if auto_select_VAE:\n",
         "    vae_path = \"dummy.pt\"\n",
@@ -1066,7 +1053,10 @@
         "    vae_files = [f for f in vaes_list if f.endswith('.vae.pt')]\n",
         "    if vae_files:\n",
         "        vae_path = random.choice(vae_files)\n",
-        "\n",
+        "        if os.path.exists(os.path.join(valid_vae_dir, vae_path)):\n",
+        "            config = read_config(config_file)\n",
+        "            config[\"sd_vae\"] = vae_path\n",
+        "            write_config(config_file, config) \n",
         "# config.json\n",
         "config = read_config(config_file)\n",
         "config[\"additional_networks_extra_lora_path\"] = valid_lora_dir\n",
@@ -1074,37 +1064,45 @@
         "config[\"eta_noise_seed_delta\"] = 0\n",
         "config[\"show_progress_every_n_steps\"] = 10\n",
         "config[\"show_progressbar\"] = True\n",
-        "if auto_select_model and os.path.exists(os.path.join(valid_ckpt_dir, model_path)):\n",
-        "    config[\"sd_model_checkpoint\"] = model_path\n",
-        "if auto_select_VAE and os.path.exists(os.path.join(valid_vae_dir, vae_path)):\n",
-        "    config[\"sd_vae\"] = vae_path\n",
         "config[\"quicksettings\"] = \"sd_model_checkpoint, sd_vae, CLIP_stop_at_last_layers, use_old_karras_scheduler_sigmas, always_discard_next_to_last_sigma\"\n",
         "write_config(config_file, config)\n",
         "\n",
-        "# ui-config.json\n",
-        "# txt2img\n",
-        "config = read_config(ui_config_file)\n",
-        "config[\"txt2img/Prompt/value\"] = default_prompt\n",
-        "config[\"txt2img/Negative prompt/value\"] = default_neg_prompt\n",
-        "config[\"txt2img/Sampling method/value\"] = default_sampler\n",
-        "config[\"txt2img/Sampling steps/value\"] = default_steps\n",
-        "config[\"txt2img/Width/value\"] = default_width\n",
-        "config[\"txt2img/Height/value\"] = default_height\n",
-        "config[\"txt2img/Upscaler/value\"] = \"Latent (nearest-exact)\"\n",
-        "config[\"txt2img/Denoising strength/value\"] = default_denoising_strength\n",
-        "config[\"txt2img/CFG Scale/value\"] = default_cfg_scale\n",
+        "if use_presets:\n",
+        "    # ui-config.json\n",
+        "    default_prompt = \"masterpiece, best quality,\"\n",
+        "    default_neg_prompt = \"(worst quality, low quality:1.4)\"\n",
+        "    default_sampler = \"DPM++ 2M Karras\"\n",
+        "    if dpm_v2_patch:\n",
+        "        default_sampler = \"DPM++ 2M Karras v2\" \n",
+        "    default_steps = 20\n",
+        "    default_width = 512\n",
+        "    default_height = 768\n",
+        "    default_denoising_strength = 0.55\n",
+        "    default_cfg_scale = 7\n",
         "\n",
-        "# img2img\n",
-        "config[\"img2img/Prompt/value\"] = default_prompt\n",
-        "config[\"img2img/Negative prompt/value\"] = default_neg_prompt\n",
-        "config[\"img2img/Sampling method/value\"] = default_sampler\n",
-        "config[\"img2img/Sampling steps/value\"] = default_steps\n",
-        "config[\"img2img/Width/value\"] = default_width\n",
-        "config[\"img2img/Height/value\"] = default_height\n",
-        "config[\"img2img/Denoising strength/value\"] = default_denoising_strength\n",
-        "config[\"img2img/CFG Scale/value\"] = default_cfg_scale\n",
-        "write_config(ui_config_file, config)\n",
-        "          \n",
+        "    # txt2img\n",
+        "    config = read_config(ui_config_file)\n",
+        "    config[\"txt2img/Prompt/value\"] = default_prompt\n",
+        "    config[\"txt2img/Negative prompt/value\"] = default_neg_prompt\n",
+        "    config[\"txt2img/Sampling method/value\"] = default_sampler\n",
+        "    config[\"txt2img/Sampling steps/value\"] = default_steps\n",
+        "    config[\"txt2img/Width/value\"] = default_width\n",
+        "    config[\"txt2img/Height/value\"] = default_height\n",
+        "    config[\"txt2img/Upscaler/value\"] = \"Latent (nearest-exact)\"\n",
+        "    config[\"txt2img/Denoising strength/value\"] = default_denoising_strength\n",
+        "    config[\"txt2img/CFG Scale/value\"] = default_cfg_scale\n",
+        "\n",
+        "    # img2img\n",
+        "    config[\"img2img/Prompt/value\"] = default_prompt\n",
+        "    config[\"img2img/Negative prompt/value\"] = default_neg_prompt\n",
+        "    config[\"img2img/Sampling method/value\"] = default_sampler\n",
+        "    config[\"img2img/Sampling steps/value\"] = default_steps\n",
+        "    config[\"img2img/Width/value\"] = default_width\n",
+        "    config[\"img2img/Height/value\"] = default_height\n",
+        "    config[\"img2img/Denoising strength/value\"] = default_denoising_strength\n",
+        "    config[\"img2img/CFG Scale/value\"] = default_cfg_scale\n",
+        "    write_config(ui_config_file, config)\n",
+        "              \n",
         "os.chdir(repo_dir)\n",
         "change_theme(theme)\n",
         "\n",
@@ -1123,15 +1121,15 @@
         "    f\"{tunnel}\": True if not tunnel == \"none\" and not ngrok_token else False,\n",
         "    \"share\": True if not ngrok_token else False,\n",
         "    \"gradio-auth\": f\"{user}:{password}\" if use_gradio_auth else None,\n",
-        "    \"no-half-vae\": no_half_VAE,\n",
-        "    \"lowram\": load_in_vram,\n",
-        "    \"no-hashing\": quiet_mode,\n",
-        "    \"disable-console-progressbars\": quiet_mode,\n",
+        "    \"no-hashing\": True,\n",
+        "    \"disable-console-progressbars\": True,\n",
         "    \"ngrok\": ngrok_token if ngrok_token else None,\n",
         "    \"ngrok-region\": ngrok_region if ngrok_token else None,\n",
         "    \"opt-sub-quad-attention\": True,\n",
         "    \"opt-channelslast\": True,\n",
         "    \"theme\": \"dark\",\n",
+        "    \"no-download-sd-model\": True,\n",
+        "    \"gradio-queue\" : True,\n",
         "    \"ckpt-dir\": valid_ckpt_dir,\n",
         "    \"vae-dir\": valid_vae_dir,\n",
         "    \"hypernetwork-dir\": valid_hypernetwork_dir,\n",
