fix: variable error

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -534,7 +534,7 @@
         "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_seg_fp16.safetensors\",\n",
         "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_softedge_fp16.safetensors\",\n",
         "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15s2_lineart_anime_fp16.safetensors\",\n",
-        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11u_sd15_tile_fp16.safetensors\",\n",
+        "    \"https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11f1e_sd15_tile_fp16.safetensors\",\n",
         "]\n",
         "\n",
         "t2i_adapter_sd15_url = [\n",
@@ -1127,7 +1127,7 @@
         "    \"ngrok-region\": ngrok_region if ngrok_token else None,\n",
         "    \"opt-sub-quad-attention\": True,\n",
         "    \"opt-channelslast\": True,\n",
-        "    \"theme\": \"dark\",\n",
+        "    \"theme\": \"dark\" if use_dark_theme else \"light\",\n",
         "    \"no-download-sd-model\": True,\n",
         "    \"gradio-queue\" : True,\n",
         "    \"ckpt-dir\": valid_ckpt_dir,\n",
