fix: added `--listen`

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -99,7 +99,7 @@
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "\n",
         "# @markdown ### **Repo Config**\n",
-        "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"Anapnoe\"]\n",
+        "repo_type = \"AUTOMATIC1111\" #@param [\"AUTOMATIC1111\", \"Anapnoe\"]\n",
         "update_webui = True  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
@@ -967,7 +967,7 @@
         "use_dark_theme = True # @param {type: 'boolean'}\n",
         "theme = \"moonlight\" # @param ['tron2', 'ogxCyanInvert', 'ogxBGreen', 'ogxRed', 'default', 'moonlight', 'd-230-52-94', 'backup', 'tron', 'ogxRedYellow', 'default_orange', 'ogxRedPurple', 'retrog', 'ogxCyan', 'fun', 'ogxGreen', 'default_cyan', 'Golde']\n",
         "# @markdown Set `use_preset` for using default prompt, resolution, sampler, and other settings\n",
-        "use_presets = True # @param {type: 'boolean'}\n",
+        "use_presets = False # @param {type: 'boolean'}\n",
         "# @markdown ### **Arguments**\n",
         "use_gradio_auth = False # @param {type: 'boolean'}\n",
         "accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
@@ -1129,7 +1129,8 @@
         "    \"opt-channelslast\": True,\n",
         "    \"theme\": \"dark\" if use_dark_theme else \"light\",\n",
         "    \"no-download-sd-model\": True,\n",
-        "    \"gradio-queue\" : True,\n",
+        "    \"gradio-queue\": True,\n",
+        "    \"listen\": True,\n",
         "    \"ckpt-dir\": valid_ckpt_dir,\n",
         "    \"vae-dir\": valid_vae_dir,\n",
         "    \"hypernetwork-dir\": valid_hypernetwork_dir,\n",
