fix: set default repo to anapnoe

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -99,7 +99,7 @@
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "\n",
         "# @markdown ### **Repo Config**\n",
-        "repo_type = \"AUTOMATIC1111\" #@param [\"AUTOMATIC1111\", \"Anapnoe\"]\n",
+        "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"Anapnoe\"]\n",
         "update_webui = True  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
