fix: changed visitor counter markdown

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -14,24 +14,18 @@
       "cell_type": "markdown",
       "source": [
         "[![visitor][visitor-badge]][visitor-stats] \n",
-        "[![discord][discord-badge]][discord-lookup]\n",
         "[![ko-fi][ko-fi-badge]][ko-fi-link]\n",
-        "[![saweria][saweria-badge]][saweria-link]\n",
         "\n",
-        "# [**Cagliostro Colab UI**][link-to-github]\n",
+        "# **Cagliostro Colab UI**\n",
         "All-in-One, Customizable and Flexible Stable Diffusion for Google Colab.\n",
         "\n",
-        "[What's New?][README] | `NEW!` [Pocketbook Guide][MANUAL]\n",
+        "[Github][link-to-github] | [What's New?][README] | [Pocketbook Guide][MANUAL]\n",
         "\n",
         "<!-- [visitor-badge]: https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui -->\n",
-        "[visitor-badge]: https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fcolab.research.google.com%2Fgithub%2FLinaqruf%2Fsd-notebook-collection%2Fblob%2Fmain%2Fcagliostro-colab-ui.ipynb&label=Visitors&labelColor=%23d9e3f0&countColor=%23697689&style=flat&labelStyle=none\n",
-        "[visitor-stats]: https://visitorbadge.io/status?path=https%3A%2F%2Fcolab.research.google.com%2Fgithub%2FLinaqruf%2Fsd-notebook-collection%2Fblob%2Fmain%2Fcagliostro-colab-ui.ipynb\n",
-        "[discord-badge]: https://dcbadge.vercel.app/api/shield/850007095775723532?style=flat\n",
-        "[discord-lookup]: https://lookup.guru/850007095775723532\n",
+        "[visitor-badge]: https://api.visitorbadge.io/api/visitors?path=Cagliostro%20Colab%20UI&label=Visitors&labelColor=%2334495E&countColor=%231ABC9C&style=flat&labelStyle=none\n",
+        "[visitor-stats]: https://visitorbadge.io/status?path=Cagliostro%20Colab%20UI\n",
         "[ko-fi-badge]: https://img.shields.io/badge/Support%20me%20on%20Ko--fi-F16061?logo=ko-fi&logoColor=white&style=flat\n",
         "[ko-fi-link]: https://ko-fi.com/linaqruf\n",
-        "[saweria-badge]: https://img.shields.io/badge/Saweria-7B3F00?style=flat&logo=ko-fi&logoColor=white\n",
-        "[saweria-link]: https://saweria.co/linaqruf\n",
         "[link-to-github]: https://github.com/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb\n",
         "[README]: https://github.com/Linaqruf/sd-notebook-collection/blob/main/README.md#whats-new\n",
         "[MANUAL]: https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#cagliostro-colab-ui-user-manual\n",
@@ -967,7 +961,7 @@
         "use_dark_theme = True # @param {type: 'boolean'}\n",
         "theme = \"moonlight\" # @param ['tron2', 'ogxCyanInvert', 'ogxBGreen', 'ogxRed', 'default', 'moonlight', 'd-230-52-94', 'backup', 'tron', 'ogxRedYellow', 'default_orange', 'ogxRedPurple', 'retrog', 'ogxCyan', 'fun', 'ogxGreen', 'default_cyan', 'Golde']\n",
         "# @markdown Set `use_preset` for using default prompt, resolution, sampler, and other settings\n",
-        "use_presets = False # @param {type: 'boolean'}\n",
+        "use_presets = True # @param {type: 'boolean'}\n",
         "# @markdown ### **Arguments**\n",
         "use_gradio_auth = False # @param {type: 'boolean'}\n",
         "accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
