feat: put lycoris dir to the same lora_dir

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -1130,6 +1130,7 @@
         "    \"hypernetwork-dir\": valid_hypernetwork_dir,\n",
         "    \"embeddings-dir\": valid_embedding_dir,\n",
         "    \"lora-dir\": valid_lora_dir,\n",
+        "    \"lyco-dir\": valid_lora_dir,\n",
         "}\n",
         "\n",
         "args = \"\"\n",
