fix: update xformers to v19

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -141,7 +141,7 @@
         "    with capture.capture_output() as cap:\n",
         "        if not \"T4\" in s:\n",
         "            !pip uninstall -y xformers\n",
-        "            !pip install -q xformers==0.0.18\n",
+        "            !pip install -q xformers==0.0.19\n",
         "        del cap\n",
         "\n",
         "    !git config --global user.email \"you@example.com\"\n",
@@ -172,7 +172,7 @@
         "    \n",
         "    with capture.capture_output() as cap:\n",
         "        !apt -y update -qq\n",
-        "        !apt install unionfs-fuse -qq         \n",
+        "        !apt install libcairo2-dev pkg-config python3-dev -yqq         \n",
         "        ubuntu_deps(ubuntu_deps_url, deps_dir)\n",
         "        if ram_alloc_patch:\n",
         "              !apt install libunwind8-dev -yqq \n",
