fix: set to not updating webui

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -94,7 +94,7 @@
         "\n",
         "# @markdown ### **Repo Config**\n",
         "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"Anapnoe\"]\n",
-        "update_webui = True  # @param {type:'boolean'}\n",
+        "update_webui = False  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
         "dpm_v2_patch = False  # @param {type:'boolean'}\n",
