fix: changed quicksettings to list instead of strings

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -1058,7 +1058,13 @@
         "config[\"eta_noise_seed_delta\"] = 0\n",
         "config[\"show_progress_every_n_steps\"] = 10\n",
         "config[\"show_progressbar\"] = True\n",
-        "config[\"quicksettings\"] = \"sd_model_checkpoint, sd_vae, CLIP_stop_at_last_layers, use_old_karras_scheduler_sigmas, always_discard_next_to_last_sigma\"\n",
+        "config[\"quicksettings\"] = [\n",
+        "    \"sd_model_checkpoint\", \n",
+        "    \"sd_vae\", \n",
+        "    \"CLIP_stop_at_last_layers\", \n",
+        "    \"use_old_karras_scheduler_sigmas\", \n",
+        "    \"always_discard_next_to_last_sigma\"\n",
+        "    ]\n",
         "write_config(config_file, config)\n",
         "\n",
         "if use_presets:\n",
