--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -1058,7 +1058,7 @@
         "config[\"eta_noise_seed_delta\"] = 0\n",
         "config[\"show_progress_every_n_steps\"] = 10\n",
         "config[\"show_progressbar\"] = True\n",
-        "config[\"quicksettings\"] = [\n",
+        "config[\"quicksettings_list\"] = [\n",
         "    \"sd_model_checkpoint\", \n",
         "    \"sd_vae\", \n",
         "    \"CLIP_stop_at_last_layers\", \n",
