feat: added new theme; `minimal` and `minimal-orange`

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -94,7 +94,7 @@
         "\n",
         "# @markdown ### **Repo Config**\n",
         "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"Anapnoe\"]\n",
-        "update_webui = False  # @param {type:'boolean'}\n",
+        "update_webui = True  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
         "dpm_v2_patch = False  # @param {type:'boolean'}\n",
@@ -959,7 +959,7 @@
         "ngrok_region = \"ap\" # @param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
         "# @markdown ### **UI Config**\n",
         "use_dark_theme = True # @param {type: 'boolean'}\n",
-        "theme = \"moonlight\" # @param ['tron2', 'ogxCyanInvert', 'ogxBGreen', 'ogxRed', 'default', 'moonlight', 'd-230-52-94', 'backup', 'tron', 'ogxRedYellow', 'default_orange', 'ogxRedPurple', 'retrog', 'ogxCyan', 'fun', 'ogxGreen', 'default_cyan', 'Golde']\n",
+        "theme = \"minimal_orange\" # @param [['moonlight', 'ogxRed', 'fun', 'ogxCyan', 'ogxCyanInvert', 'ogxBGreen', 'default_orange', 'tron2', 'd-230-52-94', 'minimal', 'ogxRedYellow', 'retrog', 'ogxRedPurple', 'ogxGreen', 'tron', 'default_cyan', 'default', 'backup', 'minimal_orange', 'Golde']\n",
         "# @markdown Set `use_preset` for using default prompt, resolution, sampler, and other settings\n",
         "use_presets = True # @param {type: 'boolean'}\n",
         "# @markdown ### **Arguments**\n",
