--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -93,7 +93,7 @@
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "\n",
         "# @markdown ### **Repo Config**\n",
-        "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"Anapnoe\"]\n",
+        "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-dev\", \"Anapnoe\"]\n",
         "update_webui = True  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
@@ -101,7 +101,6 @@
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
         "ram_alloc_patch = True  # @param {type:'boolean'}\n",
         "colab_optimizations = True  # @param {type:'boolean'}\n",
-        "\n",
         "\n",
         "# model\n",
         "os.chdir(root_dir)\n",
@@ -170,9 +169,7 @@
         "\n",
         "    print(\"\u001b[1;32mInstalling dependencies...\")\n",
         "    \n",
-        "    with capture.capture_output() as cap:\n",
-        "        !apt -y update -qq\n",
-        "        !apt install libcairo2-dev pkg-config python3-dev -yqq         \n",
+        "    with capture.capture_output() as cap:        \n",
         "        ubuntu_deps(ubuntu_deps_url, deps_dir)\n",
         "        if ram_alloc_patch:\n",
         "              !apt install libunwind8-dev -yqq \n",
@@ -246,7 +243,8 @@
         "            print(\"\u001b[1;32mUpdating Web UI to the latest version\")\n",
         "            with capture.capture_output() as cap:\n",
         "                os.chdir(repo_dir)\n",
-        "                !git pull -X theirs --rebase --autostash\n",
+        "                !git fetch origin\n",
+        "                !git pull\n",
         "            del cap\n",
         "        except Exception as e:\n",
         "            print(\"\u001b[1;32mAn error occurred when updating Web UI:\", e)\n",
