--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -36,6 +36,22 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "---\n",
+        "####  <font color=\"#af4154\">**WARNING**</font>\n",
+        "\n",
+        "An annoying bug has recently occurred in `Anapnoe-webui`. Extra networks are not displaying Models, Embeddings, LoRA, etc., even if they exist in the respective folder. Until this issue is fixed, it is recommended to use **Kohya's Additional Networks extension** to load LoRA and LoCon instead. Track the discussion [here](https://github.com/anapnoe/stable-diffusion-webui-ux/issues/141).\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "l0sNOX084Uhh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# @title ## **Install Cagliostro Colab UI** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#install-stable-diffusion-web-ui)</small></small>\n",
