fix: temprary fixed by reset commit hash to f2b9c2c

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -42,7 +42,10 @@
         "---\n",
         "####  <font color=\"#af4154\">**WARNING**</font>\n",
         "\n",
-        "An annoying bug has recently occurred in `Anapnoe-webui`. Extra networks are not displaying Models, Embeddings, LoRA, etc., even if they exist in the respective folder. Until this issue is fixed, it is recommended to use **Kohya's Additional Networks extension** to load LoRA and LoCon instead. Track the discussion [here](https://github.com/anapnoe/stable-diffusion-webui-ux/issues/141).\n",
+        "~~An annoying bug has recently occurred in `Anapnoe-webui`. Extra networks are not displaying Models, Embeddings, LoRA, etc., even if they exist in the respective folder. Until this issue is fixed, it is recommended to use **Kohya's Additional Networks extension** to load LoRA and LoCon instead.~~ \n",
+        "\n",
+        "**Temporary fixed by reset commit hash to [f2b9c2c](https://github.com/anapnoe/stable-diffusion-webui-ux/commit/f2b9c2cb4fa5f0e866c1b6f84e44d12ff6653af3). Track discussion [here](https://github.com/anapnoe/stable-diffusion-webui-ux/issues/141).**\n",
+        "\n",
         "\n",
         "---\n",
         "\n"
@@ -112,7 +115,7 @@
         "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-dev\", \"Anapnoe\"]\n",
         "update_webui = True  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
-        "commit_hash = \"\"  # @param {type:'string'}\n",
+        "commit_hash = \"f2b9c2cb4fa5f0e866c1b6f84e44d12ff6653af3\"  # @param {type:'string'}\n",
         "dpm_v2_patch = False  # @param {type:'boolean'}\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
         "ram_alloc_patch = True  # @param {type:'boolean'}\n",
