fix: final fix for quicksettings

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -247,16 +247,6 @@
         "    else:\n",
         "        reinstall_webui()\n",
         "\n",
-        "    if commit_hash:\n",
-        "        try:\n",
-        "            os.chdir(repo_dir)\n",
-        "            with capture.capture_output() as cap:\n",
-        "                !git reset --hard {commit_hash}\n",
-        "                del cap\n",
-        "            print(\"\u001b[1;32mCommit hash: \", commit_hash)\n",
-        "        except Exception as e:\n",
-        "            print(\"\u001b[1;32mAn error occurred while resetting the commit hash:\", e)\n",
-        "\n",
         "    if update_webui:\n",
         "        try:\n",
         "            print(\"\u001b[1;32mUpdating Web UI to the latest version\")\n",
@@ -267,6 +257,16 @@
         "            del cap\n",
         "        except Exception as e:\n",
         "            print(\"\u001b[1;32mAn error occurred when updating Web UI:\", e)\n",
+        "            \n",
+        "    if commit_hash:\n",
+        "        try:\n",
+        "            os.chdir(repo_dir)\n",
+        "            with capture.capture_output() as cap:\n",
+        "                !git reset --hard {commit_hash}\n",
+        "                del cap\n",
+        "            print(\"\u001b[1;32mCommit hash: \", commit_hash)\n",
+        "        except Exception as e:\n",
+        "            print(\"\u001b[1;32mAn error occurred while resetting the commit hash:\", e)\n",
         "\n",
         "    if dpm_v2_patch:\n",
         "        with capture.capture_output() as cap:\n",
@@ -1075,16 +1075,16 @@
         "config[\"eta_noise_seed_delta\"] = 0\n",
         "config[\"show_progress_every_n_steps\"] = 10\n",
         "config[\"show_progressbar\"] = True\n",
-        "if config[\"quicksettings_list\"]:\n",
-        "    config[\"quicksettings_list\"] = [\n",
-        "        \"sd_model_checkpoint\", \n",
-        "        \"sd_vae\", \n",
-        "        \"CLIP_stop_at_last_layers\", \n",
-        "        \"use_old_karras_scheduler_sigmas\", \n",
-        "        \"always_discard_next_to_last_sigma\"\n",
-        "        ]\n",
-        "else:\n",
+        "if config[\"quicksettings\"]:\n",
         "    config[\"quicksettings\"] = \"sd_model_checkpoint, sd_vae, CLIP_stop_at_last_layers, use_old_karras_scheduler_sigmas, always_discard_next_to_last_sigma\"\n",
+        "else:\n",
+        "    config[\"quicksettings_list\"] = [\n",
+        "    \"sd_model_checkpoint\", \n",
+        "    \"sd_vae\", \n",
+        "    \"CLIP_stop_at_last_layers\", \n",
+        "    \"use_old_karras_scheduler_sigmas\", \n",
+        "    \"always_discard_next_to_last_sigma\"\n",
+        "    ]\n",
         "    \n",
         "write_config(config_file, config)\n",
         "\n",
