fix: published v2.6.1, add civitai browser back

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -94,9 +94,9 @@
         "\n",
         "# @markdown ### **Repo Config**\n",
         "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-dev\", \"Anapnoe\"]\n",
-        "update_webui = True  # @param {type:'boolean'}\n",
+        "update_webui = False  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
-        "commit_hash = \"f2b9c2cb4fa5f0e866c1b6f84e44d12ff6653af3\"  # @param {type:'string'}\n",
+        "commit_hash = \"\"  # @param {type:'string'}\n",
         "dpm_v2_patch = False  # @param {type:'boolean'}\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
         "ram_alloc_patch = True  # @param {type:'boolean'}\n",
@@ -950,8 +950,8 @@
         "\n",
         "# @markdown ### **Alternative Tunnel**\n",
         "\n",
-        "# @markdown > Recommended Tunnels: `ngrok` > `cloudflared` > `remotemoe` > `localhostrun` > `googleusercontent` > `gradio`\n",
-        "tunnel = \"cloudflared\" # @param ['none', 'multiple','cloudflared', 'localhostrun', 'remotemoe', \"googleusercontent\"]\n",
+        "# @markdown > `[Update]` Recommended Tunnels: `ngrok` > `gradio` > `cloudflared` > `remotemoe` > `localhostrun` > `googleusercontent`\n",
+        "tunnel = \"multiple\" # @param ['none', 'multiple','cloudflared', 'localhostrun', 'remotemoe', \"googleusercontent\"]\n",
         "# @markdown > Get <b>your</b> token for ngrok [here](https://dashboard.ngrok.com/get-started/your-authtoken) \n",
         "ngrok_token = \"\" # @param {type: 'string'}\n",
         "ngrok_region = \"ap\" # @param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
