fix: add `latest_gradio` to force update gradio https://github.com/Linaqruf/sd-notebook-collection/issues/33 https://github.com/Linaqruf/sd-notebook-collection/issues/30

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -101,6 +101,9 @@
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
         "ram_alloc_patch = True  # @param {type:'boolean'}\n",
         "colab_optimizations = True  # @param {type:'boolean'}\n",
+        "# @markdown ### **Experimental Config**\n",
+        "# @markdown > An attempt to fix queue and generate stuck problem\n",
+        "latest_gradio = True  # @param {type:'boolean'}\n",
         "\n",
         "# model\n",
         "os.chdir(root_dir)\n",
@@ -210,7 +213,27 @@
         "            install_webui(overwrite=True)\n",
         "    except Exception as e:\n",
         "        print(f\"\u001b[1;32mAn error occurred: {e}\")\n",
-        "            \n",
+        "\n",
+        "def update_gradio_version(repo_dir, desired_version, latest_gradio=False):\n",
+        "    if latest_gradio:\n",
+        "        requirements_file = os.path.join(repo_dir, \"requirements_versions.txt\")\n",
+        "\n",
+        "        with open(requirements_file, \"r\") as f:\n",
+        "            lines = f.readlines()\n",
+        "\n",
+        "        updated_lines = []\n",
+        "        for line in lines:\n",
+        "            if \"gradio\" in line:\n",
+        "                line = f\"gradio=={desired_version}\\n\"\n",
+        "            updated_lines.append(line)\n",
+        "\n",
+        "        with open(requirements_file, \"w\") as f:\n",
+        "            f.writelines(updated_lines)\n",
+        "\n",
+        "        subprocess.run([\"pip\", \"install\", \"--upgrade\", f\"gradio=={desired_version}\"], check=True)\n",
+        "\n",
+        "        print(f\"\u001b[1;32mUpdating Gradio to version '3.31.0'\")\n",
+        "                    \n",
         "def main():\n",
         "    global drive_dir\n",
         "    \n",
@@ -248,6 +271,8 @@
         "            print(\"\u001b[1;32mCommit hash: \", commit_hash)\n",
         "        except Exception as e:\n",
         "            print(\"\u001b[1;32mAn error occurred while resetting the commit hash:\", e)\n",
+        "\n",
+        "    update_gradio_version(repo_dir, \"3.31.0\", latest_gradio=latest_gradio)\n",
         "\n",
         "    if dpm_v2_patch:\n",
         "        with capture.capture_output() as cap:\n",
@@ -347,8 +372,7 @@
         "main()"
       ],
       "metadata": {
-        "id": "A6c7-qjDdb0X",
-        "cellView": "form"
+        "id": "A6c7-qjDdb0X"
       },
       "execution_count": null,
       "outputs": []
