fix: close code showing

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -372,7 +372,8 @@
         "main()"
       ],
       "metadata": {
-        "id": "A6c7-qjDdb0X"
+        "id": "A6c7-qjDdb0X",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
