fix: added missing module (subprocess)

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -45,6 +45,7 @@
         "import time\n",
         "import json\n",
         "import fileinput\n",
+        "import subprocess\n",
         "import base64\n",
         "from google.colab import drive\n",
         "from datetime import timedelta\n",
