fix: forcing pro user to use sdp attention instead of xformers

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -144,7 +144,6 @@
         "    with capture.capture_output() as cap:\n",
         "        if not \"T4\" in s:\n",
         "            !pip uninstall -y xformers\n",
-        "            !pip install -q xformers==0.0.19\n",
         "        del cap\n",
         "\n",
         "    !git config --global user.email \"you@example.com\"\n",
@@ -972,6 +971,8 @@
         "import os\n",
         "import random\n",
         "import string\n",
+        "from subprocess import getoutput\n",
+        "\n",
         "%store -r \n",
         "\n",
         "# @markdown ### **Alternative Tunnel**\n",
@@ -989,6 +990,10 @@
         "# @markdown ### **Arguments**\n",
         "use_gradio_auth = False # @param {type: 'boolean'}\n",
         "accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
+        "\n",
+        "if not \"T4\" in getoutput(\"nvidia-smi\"):\n",
+        "    accelerator = \"opt-sdp-attention\"\n",
+        "\n",
         "auto_select_model = False # @param {type: 'boolean'}\n",
         "auto_select_VAE = True # @param {type: 'boolean'}\n",
         "additional_arguments = \"--lowram --no-half-vae\" #@param {type: 'string'}\n",
@@ -1047,6 +1052,9 @@
         "        return cloned_dir \n",
         "    else:\n",
         "        return original_dir\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "valid_ckpt_dir = is_dir_exist(os.path.join(fused_dir, \"model\"), models_dir)\n",
         "valid_vae_dir = is_dir_exist(os.path.join(fused_dir, \"vae\"), vaes_dir)\n",
