fix: turn off update extensions

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -96,7 +96,7 @@
         "# @markdown ### **Repo Config**\n",
         "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-dev\", \"Anapnoe\"]\n",
         "update_webui = False  # @param {type:'boolean'}\n",
-        "update_extensions = True  # @param {type:'boolean'}\n",
+        "update_extensions = False  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
         "dpm_v2_patch = False  # @param {type:'boolean'}\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
@@ -476,7 +476,7 @@
         "    mins, secs = divmod(elapsed_time, 60)\n",
         "    print(f\"\\n\u001b[1;32mDownload completed. Took {mins} mins {secs} sec\")\n",
         "\n",
-        "print(\"\u001b[1;32mAll is done! Go to the next step\")\n"
+        "print(\"\u001b[1;32mAll is done! Go to the next step\")"
       ],
       "metadata": {
         "id": "qgvihy5BQ3II",
